# shelly_power_logger

./: README.md  Shelly_ESP32_Logger.ino  WebPortal.h  shelly_push.js
.github/workflows/: built_firmware.yml  built_release.yml
Logger/: Config.h  Logger.h  PowerMonitor.h  ShellyClient.h  Shelly_ESP32_Logger.ino  StatusLed.h  WebPortal.cpp  WebPortal.h  shelly_push.js
bring_up_firmware/ADC_bring_up/: ADC_Bringup.ino  ADC_Calibration_Guide.md  FILE_SUMMARY.txt  Logger_ADC_Integration.h  README_ADC_Bringup.md  adc_analysis.py
documentation/: HW_Description_Shelly_Logger_v1.2.docx  HW_Description_Shelly_Logger_v1_3.docx  HW_Description_and_Schematic_Shelly_Logger_v1 (3).docx  HW_Description_and_Schematic_Shelly_Logger_v1 (4) (1).docx  HW_Description_and_Schematic_Shelly_Logger_v1 (4).docx  HW_Description_and_Schematic_Shelly_Logger_v1.docx  Requirements_Shelly_ESP32_v1_03_updated.md  architecture (1).md  architecture.md  electronics_BOM.md  how_to_flash_over_the_air.md  software_architectual_doc.md
documentation/risk_safety/: risk_assesment.md
tests/: Arduino.h  ArduinoJson.h  CMakeLists.txt  RTClib.h  SD.h  SPI.h  built_firmware.yml  config.h  test_logger.cpp  test_shelly_client.cpp
